[gd_scene load_steps=16 format=3 uid="uid://csqssdsto8mo2"]

[ext_resource type="Script" path="res://scenes/game/game.gd" id="1_u3tvl"]
[ext_resource type="PackedScene" uid="uid://bbtwuq4eu5wdn" path="res://scenes/levels/playground/playground.tscn" id="2_moqi2"]
[ext_resource type="PackedScene" uid="uid://c5oowkgakc0f1" path="res://scripts/terminal/terminal.tscn" id="3_ctbtt"]
[ext_resource type="Script" path="res://scenes/game/ui.gd" id="4_weomh"]
[ext_resource type="Theme" uid="uid://cvocwk6x1wj7h" path="res://themes/global.tres" id="5_c08qt"]
[ext_resource type="Texture2D" uid="uid://dpms5y5oait02" path="res://resources/ui/text2.svg" id="6_qgrna"]
[ext_resource type="Texture2D" uid="uid://conthhec0sh1p" path="res://resources/ui/halo.svg" id="7_n0kuv"]
[ext_resource type="Texture2D" uid="uid://bgot4sv4kbr6s" path="res://resources/ui/ammo.png" id="8_mudwn"]
[ext_resource type="PackedScene" uid="uid://81vw62kvmq4x" path="res://scripts/utils/ui/settings.tscn" id="9_njdey"]
[ext_resource type="PackedScene" uid="uid://boipvhnjm6t4" path="res://scripts/utils/debug/debug.tscn" id="10_l45wu"]
[ext_resource type="PackedScene" uid="uid://byxmim7bcdktw" path="res://scripts/cursor/cursor.tscn" id="11_qtms7"]
[ext_resource type="PackedScene" uid="uid://bxfn0qwncpjx3" path="res://scripts/utils/dialogue/dialogue.tscn" id="12_jiuk3"]
[ext_resource type="PackedScene" uid="uid://bwttekjq5ebmb" path="res://scripts/utils/visual_effects/world_environments/default.tscn" id="13_l3qgr"]
[ext_resource type="PackedScene" uid="uid://10vet1k8lhh7" path="res://scripts/components/bgm/bgm_player.tscn" id="14_87345"]
[ext_resource type="AudioStream" uid="uid://dbqu68kbmtlff" path="res://resources/sounds/music/opengameart.org/awake10_megaWall.wav" id="15_gbs8m"]

[node name="MainScreen" type="Node"]
process_mode = 3
script = ExtResource("1_u3tvl")

[node name="Playground" parent="." instance=ExtResource("2_moqi2")]
process_mode = 1

[node name="FloatingUI" type="CanvasLayer" parent="."]
unique_name_in_owner = true
follow_viewport_enabled = true

[node name="FollowPlayer" type="Control" parent="FloatingUI"]
unique_name_in_owner = true
process_mode = 3
visibility_layer = 2
z_index = 1
z_as_relative = false
texture_filter = 2
layout_mode = 3
anchors_preset = 0

[node name="Terminal" parent="FloatingUI/FollowPlayer" instance=ExtResource("3_ctbtt")]

[node name="UI" type="CanvasLayer" parent="."]
unique_name_in_owner = true
process_mode = 3
layer = 2
script = ExtResource("4_weomh")

[node name="BGLayout" type="ColorRect" parent="UI"]
visible = false
offset_right = 1024.0
offset_bottom = 576.0
color = Color(0.109804, 0.109804, 0.109804, 1)

[node name="Right" type="BoxContainer" parent="UI"]
offset_left = 896.0
offset_right = 2176.0
offset_bottom = 5760.0
scale = Vector2(0.1, 0.1)
mouse_filter = 2
theme = ExtResource("5_c08qt")

[node name="VBoxContainer" type="VBoxContainer" parent="UI/Right"]
layout_mode = 2
size_flags_horizontal = 3
mouse_filter = 2

[node name="Control" type="Control" parent="UI/Right/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
mouse_filter = 2

[node name="VBoxContainer2" type="VBoxContainer" parent="UI/Right/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
mouse_filter = 2

[node name="HBoxContainer" type="HBoxContainer" parent="UI/Right/VBoxContainer/VBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 0
mouse_filter = 2

[node name="CenterContainer" type="CenterContainer" parent="UI/Right/VBoxContainer/VBoxContainer2/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
mouse_filter = 2

[node name="Terminal" type="TextureRect" parent="UI/Right/VBoxContainer/VBoxContainer2/HBoxContainer/CenterContainer"]
unique_name_in_owner = true
layout_mode = 2
mouse_filter = 2
texture = ExtResource("6_qgrna")

[node name="TerminalBar" type="TextureProgressBar" parent="UI/Right/VBoxContainer/VBoxContainer2/HBoxContainer/CenterContainer"]
unique_name_in_owner = true
layout_mode = 2
mouse_filter = 2
step = 0.01
value = 100.0
fill_mode = 4
texture_progress = ExtResource("7_n0kuv")

[node name="Label" type="Label" parent="UI/Right/VBoxContainer/VBoxContainer2/HBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 112
text = " Terminal"

[node name="TopLeft" type="BoxContainer" parent="UI"]
offset_right = 258.0
offset_bottom = 40.0
theme = ExtResource("5_c08qt")

[node name="Control" type="Control" parent="UI/TopLeft"]
texture_filter = 6
layout_mode = 2
mouse_filter = 1

[node name="Ammo" type="Sprite2D" parent="UI/TopLeft/Control"]
visible = false
position = Vector2(919, 521)
scale = Vector2(0.5, 0.5)
texture = ExtResource("8_mudwn")

[node name="SettingsButton" type="Button" parent="UI/TopLeft"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 16
toggle_mode = true
text = "Settings"

[node name="SaveButton" type="Button" parent="UI/TopLeft"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 16
toggle_mode = true
text = "Save&Exit"

[node name="FPS" type="HBoxContainer" parent="UI/TopLeft"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Label" type="Label" parent="UI/TopLeft/FPS"]
layout_mode = 2
theme = ExtResource("5_c08qt")
theme_override_font_sizes/font_size = 20
text = "FPS:"

[node name="FPSMeter" type="Label" parent="UI/TopLeft/FPS"]
unique_name_in_owner = true
layout_mode = 2
theme_override_font_sizes/font_size = 20

[node name="Settings" parent="UI" instance=ExtResource("9_njdey")]
visible = false

[node name="Debug" parent="UI" instance=ExtResource("10_l45wu")]
offset_left = 792.0
offset_top = 48.0
offset_right = 1009.0
offset_bottom = 458.0
mouse_filter = 2

[node name="UneffectedUI" type="CanvasLayer" parent="."]
unique_name_in_owner = true
layer = 3

[node name="MasterDialogue" parent="UneffectedUI" instance=ExtResource("12_jiuk3")]

[node name="Crosshair" parent="UneffectedUI" instance=ExtResource("11_qtms7")]
texture_filter = 2
position = Vector2(-16, -8)

[node name="WorldEnvironment" parent="." instance=ExtResource("13_l3qgr")]
unique_name_in_owner = true

[node name="BgmPlayer" parent="." instance=ExtResource("14_87345")]
sfx_array = Array[AudioStream]([ExtResource("15_gbs8m")])
shuffle = false
max_polyphony = 1
audio_bus = 1

[connection signal="pressed" from="UI/TopLeft/SaveButton" to="." method="_on_save_button_pressed"]
