class_name MainGame extends Node

static var instance: MainGame

static var ui: CanvasLayer:
	get: return MainGame.instance.get_node("%StaticUI")
static var uneffected_ui: CanvasLayer:
	get: return MainGame.instance.get_node("%UneffectedUI")
static var cursor: Node2D:
	get: return MainGame.instance.get_node("$UI/Crosshair")
static var fps_value: Label:
	get: return MainGame.instance.get_node("%FPSMeter")
static var follow_player_node: Control:
	get: return MainGame.instance.get_node("%FollowPlayer")
static var world_environment: WorldEnvironment:
	get: return MainGame.instance.get_node("%WorldEnvironment")
static var environment: Environment:
	get: return world_environment.environment

func _init() -> void:
	instance = self

func _ready():
	Input.set_mouse_mode(Input.MOUSE_MODE_HIDDEN)

func _process(_delta) -> void:
	fps_value.text = str(Engine.get_frames_per_second())
	
func _on_save_button_pressed() -> void:
	var error := GameSaveService.save_to_file("test_save")
	if error != OK:
		push_error("Error saving data: %s" % error_string(error))
		return
	SceneManager.set_target_scene("res://scenes/levels/test/main_menu.tscn", true, true)
	SceneManager.change_scene()
